class4/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongodemo
  name: mongodemo
  namespace: j2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodemo
  template:
    metadata:
      labels:
        app: mongodemo
    spec:
      containers:
      - image: mongo
        name: mongo
        args: ["--dbpath","/data/db"]
        volumeMounts:
          - mountPath: /data
            name: kind-pv
      volumes: 
        - name: kind-pv
          hostPath:
            path: /kind-pv
