class4/node-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nodedemo
  name: nodedemo
  namespace: j2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodedemo
  template:
    metadata:
      labels:
        app: nodedemo
    spec:
      containers:
        - name: node-demo
          image: docker.io/jgenso/node-demo:0.0.1
          imagePullPolicy: Always
