class4/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nodedemo-service
  name: nodedemo-svc
  namespace: j2
spec:
  ports:
  - port: 3000
    protocol: TCP
    targetPort: 3000
    nodePort: 31000
  selector:
    app: nodedemo
  type: NodePort
status:
  loadBalancer: {}
