class4/ingress-node.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-ingress
spec:
  rules:
    - host: node.test.com
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: nodedemo-svc
                port:
                  number: 3000
